# koifish

./: .gitignore  .gitpod.yml  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.html  README.md  faq.html  index.html  print.html  searchindex.js  searchindex.json  travis.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: mdbook.yml  mdbook_build.yml  mdbook_deploy.yml  rust.yml  rust_build.yml  rust_publish.yml
commands/: index.html
contributing/: CODE_OF_CONDUCT.html  cla.html  code.html  document.html  index.html
docs/: book.toml
docs/src/: SUMMARY.md  index.md
docs/src/commands/: index.md
docs/src/contributing/: CODE_OF_CONDUCT.md  cla.md  code.md  document.md
docs/src/guide/: index.md
docs/src/reference/: index.md
docs/src/roadmap/: index.md
getting-started/: index.html  installation.html
guide/: index.html
reference/: index.html
roadmap/: index.html
src/: app.rs  main.rs
src/handler/: cli.rs  join.rs  login.rs  mod.rs  oauth.rs
src/handlers/: mod.rs
src/model/: conf.rs  mod.rs  oauth.rs  user.rs
src/static/: index.html
src/utils/: config_util.rs  mod.rs
src/widgets/: cli.rs  details.rs  home.rs  mod.rs  search.rs
