[package]
name = "koifish"
version = "0.0.1"
authors = ["francis-du <francis@francisdu.com>"]
edition = "2018"

[[bin]]
name = "koifish"

[dependencies]
crossterm = "0.17"
github-rs = "0.7"
serde_json = "1.0"
serde = "1.0.110"
paw = "1.0"

structopt = { version = "0.3", features = [ "paw" ] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
tui = { version = "0.9", default-features = false, features = ['crossterm'] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }